src/test/ui/pattern/usefulness/65413-constants-and-slices-exhaustiveness.stderr
error: unreachable pattern
  --> $DIR/65413-constants-and-slices-exhaustiveness.rs:12:9
   |
LL |         C0 => {}
   |         ^^
   |
note: lint level defined here
  --> $DIR/65413-constants-and-slices-exhaustiveness.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

